# SemanticSearchExample

./: .gitignore  README.md  appdb_backup.sql  playground.ipynb  pyproject.toml
docker/postgres/: compose.yml
