[project]
name = "simpletokenizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bitsandbytes>=0.48.2",
    "datasets>=4.5.0",
    "huggingface-hub>=0.36.0",
    "install",
    "ipykernel>=6.31.0",
    "llama-index>=0.14.13",
    "llama-index-embeddings-huggingface>=0.6.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openai",
    "openai-agents>=0.7.0",
    "optimum>=2.1.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.2.2.240807",
    "peft>=0.17.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.2.13",
    "pymongo",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=5.1.2",
    "sk>=0.0.1",
    "tokenizers>=0.22.2",
    "transformers>=4.57.6",
]
